general cleanup and new favicon easter egg

--- a/keyhunt/guide-1.1.html
+++ b/keyhunt/guide-1.1.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="keyhunt.css">
 		<title>what are you running from?</title>
-  		<link rel="icon" type="image/x-icon" href="assets/favicon.png">
+  		<link rel="icon" type="image/x-icon" href="assets/favicon-1.1.png">
 	</head>
 
 	<body>
@@ -54,7 +54,7 @@
 			<h3>Common Issues:</h3>
 			<ol>
 				<li>If no bullet is fired, enter a level and immediately exit.</li>
-				<li>If the door doesn't break, talk to GPB in the <a href="help#void">Void Room</a> and verify you have the previous 5 Keys.</li>
+				<li>If the door doesn't break, talk to GPB in the <a href="help-1.1#void">Void Room</a> and verify you have the previous 5 Keys.</li>
 			</ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/I6rlKE50CYA" title="Key 6" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2 id="7">Key 7</h2>
@@ -62,7 +62,7 @@
 			<h3>Common Issues:</h3>
 			<ol>
 				<li>You have to use a keyboard. Press the arrow keys and the B and A keys.</li>
-				<li>Mario can do a “Wall Jump” if you fail to collect the Key, just mash jump while running into a wall.</li>
+				<li>Mario can do a “wall jump” if you fail to collect the Key, just mash jump while running into a wall.</li>
 				<li>When returning to Peppino, you will have to jump before the last A press, or you'll get stuck in the floor.</li>
 			</ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ox7522mlfsQ" title="Key 7" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -90,7 +90,7 @@
 			<h2 id="15">Key 15</h2>
 			<p>Floating above the pedestal in the Green Room, right before you enter CToP.</p>
 			<h3>Common Issues:</h3>
-			<ol><li>See Unlocking CToP.</li></ol>
+			<ol><li>If you can’t enter the door, <a href="help-1.1#ctop">click here</a>.</li></ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/W9-0v2ghRiQ" title="Key 15" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2 id="16">Key 16</h2>
 			<p>Shoulder Bash left into the opposite corner of the Floor 1 Secret room.</p>
