--- a/keyhunt/guide-af23.html
+++ b/keyhunt/guide-af23.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="af23.css">
 		<title>when will you learn?</title>
-  		<link rel="icon" type="image/x-icon" href="assets/faviconscb.png">
+  		<link rel="icon" type="image/x-icon" href="assets/favicon-af23.png">
 	</head>
 
 	<body>
