--- a/keyhunt/keyhunt-1.1.html
+++ b/keyhunt/keyhunt-1.1.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="keyhunt.css">
 		<title>what are you running from?</title>
-  		<link rel="icon" type="image/x-icon" href="assets/favicon.png">
+  		<link rel="icon" type="image/x-icon" href="assets/favicon-1.1.png">
 	</head>
 
 	<body style="text-align: center;">
