--- a/keyhunt/other-af23.html
+++ b/keyhunt/other-af23.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="af23.css">
 		<title>when will you learn?</title>
-  		<link rel="icon" type="image/x-icon" href="assets/faviconscb.png">
+  		<link rel="icon" type="image/x-icon" href="assets/favicon-af23.png">
 	</head>
 
 	<body>
@@ -28,11 +28,11 @@
 		<div style="padding:20px; margin-top:20px;">
 			<h1 style="text-align: center;">Other Stuff</h1>
 			<h2>The Void Room</h2>
-			<audio controls><source src="assets/mu_pizzaboy-af23.ogg" type="audio/ogg"></audio>
+			<audio controls><source src="assets/mu_thief.ogg" type="audio/ogg"></audio>
 			<p>This is the music that plays in the Void Room, as well as several secret areas. Somehow, it is even more eerie than the previous one.
 			<br>The Void Room can be accessed in the same way as in v1.1. However, you will now be met with an infinitely looping white plane with only occasional decoration. Shadow Pizzaboy can be found by running far enough in either direction.</p>
 			<h2>Shadow Pizzaboy</h2>
-			<img src="assets/spr_heaven.png">
+			<img src="assets/spr_heaven-af23.png">
 			<p>Shadow Pizzaboy is a new entity that can be found in the Void Room.</p>
 			<p>Dialog:</p>
 			<ol>
@@ -43,7 +43,7 @@
 			</ol>
 			<h2>Silver Coneboy</h2>
 			<p>Silver Coneboy is a new entity that appears on top of the tower once you've collected all 8 Keys. He says a line of dialog and closes your game, resetting your keys in the process.</p>
-			<img src="assets/faviconscb.png">
+			<img src="assets/favicon-af23.png">
 			<p>"when will you learn?"</p>
 			<h2>golden_pizazboy.png</h2>
 			<p>A room containing this image is present in the files. It can't be accessed normally. (Image brightened for clarity)</p>
