--- a/keyhunt/other-1.1.html
+++ b/keyhunt/other-1.1.html
@@ -22,7 +22,7 @@
 				</div>
 			</li>
 		</ul>
-		
+
 		<div style="padding:20px; margin-top:20px;">
 			<h1 style="text-align: center;">Other Stuff</h1>
 			<h2>Mimic Toppins</h2>
@@ -40,9 +40,7 @@
 			<p>0:59 - [Secure] so many matters</p>
 			<p>1:01 - Ha-zi-est, to what [Unintelligible]</p>
 			<p>1:07 - [Unintelligible, perhaps another language?]</p>
-			<audio controls><source src="assets/mu_thief.ogg" type="audio/ogg"></audio>
-			<p>This is the music that plays in Purgatory. It’s the same one used in the April Fools build.</p>
-			<h2>GPB Dialog (OUTDATED)</h2>
+			<h2>GPB Dialog</h2>
 			<ul style="font-size: 16px;">
 				<li>Standard Dialog:
 					<ol>
@@ -107,7 +105,7 @@
 				</li>
 				<p>There's also a 0.5% chance every time you talk for him to say "leave" repeatedly afterwards.</p>
 			</ul>
-			<h2>Crustavo (OUTDATED)</h2>
+			<h2>Crustavo</h2>
 			<p>Crustavo exists solely to say vague and ominous things to scare the player. None of his dialog is actually relevant.</p>
 			<ul style="font-size: 16px;">
 				<li>Floor 1: I've been seeing more and more cracks around in this tower. This place has seen better days...</li>
@@ -126,8 +124,10 @@
 				<li>Floor 4: I swear I've seen that janitor guy doing shady stuff around here...</li>
 				<li>Floor 5: ...I wouldn't trust that tubby golden fellow if I were you...</li>
 			</ul>
-			<h2 id="fakekeys">Fake Key</h2>
-			<p>There is only one fake Key. Here’s it’s location:</p>
+			<h2 id="fakekeys">Fake Keys</h2>
+			<p>There are several fake Keys scattered around the tower. Here are a few of them:</p>
+			<img src="assets/fake-keys/f1.png" alt="The fake Key in the wall above John Gutter." width="50%">
+			<img src="assets/fake-keys/ctop.png" alt="The fake Key above the water on Floor 3 of CToP." width="50%">
 			<img src="assets/fake-keys/crustcove.png" alt="The fake Key in Crust Cove." width="50%">
 		</div>
     </body>
