--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -34,6 +34,11 @@
 			</li>
 		</ul>
 
+		<div class="scrolling_bg2"></div>
+
+		<div class="scrolling_bg"></div>
+		
+
 		<div style="padding:20px; margin-top:20px;">
 			<h1>All Keys Video Guide (Coming Soon!)</h1>
 			<p>This video will show the location of every Key in order. If you want to use the original guide, or if you need help on a specific Key, it can be found below.</p>
