--- a/keyhunt/help.html
+++ b/keyhunt/help.html
@@ -33,6 +33,10 @@
 				</div>
 			</li>
 		</ul>
+
+		<div class="scrolling_bg2"></div>
+
+		<div class="scrolling_bg"></div>
 		
 		<div style="padding:20px; margin-top:20px;">
 			<h1 style="text-align: center;">Troubleshooting Guide</h1>
