--- a/keyhunt/keyhunt-1.1.html
+++ b/keyhunt/keyhunt-1.1.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="keyhunt.css">
+		<link rel="stylesheet" href="keyhunt-1.1.css">
 		<title>what are you running from?</title>
   		<link rel="icon" type="image/x-icon" href="assets/favicon-1.1.png">
 	</head>
