(mostly) removed obnoxious bg
now exclusive to other

--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="keyhunt.css">
+		<link rel="stylesheet" href="keyhunt-1.2.css">
 		<title>another lost soul has come here</title>
   		<link rel="icon" type="image/x-icon" href="assets/favicon.png">
 	</head>
