--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -41,7 +41,7 @@
 		<div style="padding:20px; margin-top:20px;">
 			<h1 style="text-align: center;">Other Stuff</h1>
 			<h2>Mimic Toppins</h2>
-			<p>Mimics are a rare kind of Toppin that can appear at any time. Upon entering a room with a Toppin, there is a 2%* chance that the Toppin will become a mimic. Exiting and reentering the room will reset the Toppin and reroll the RNG. When a Toppin becomes a mimic, it has a 50% chance to play a distorted cry for help. Upon being collected, it will play the collect sound at 80% speed, and has a 50% chance to play a very loud sound. Mimic Toppins are entirely black, and retain the shape of whichever Toppin they replaced. Other than that, they function identically to normal Toppins and only serve to scare the player occasionally.</p>
+			<p>Mimics are a rare kind of Toppin that can appear at any time. Upon entering a room with a Toppin, there is a 0.1%* chance that the Toppin will become a mimic. Exiting and reentering the room will reset the Toppin and reroll the RNG. When a Toppin becomes a mimic, it has a 50% chance to play a distorted cry for help. Upon being collected, it will play the collect sound at 80% speed, and has a 50% chance to play a very loud sound. Mimic Toppins are entirely black, and retain the shape of whichever Toppin they replaced. Other than that, they function identically to normal Toppins and only serve to scare the player occasionally.</p>
 			<p>*When talking to GPB, he may mention the Mimics, stating that they are only there to harm you. This is misleading, as they do nothing other than jumpscare you. Reading this dialog will raise the chances of a Toppin becoming a Mimic to 50% until the next one spawns.</p>
 			<h2>The Void Room</h2>
 			<audio controls><source src="assets/mu_pizzaboy.ogg" type="audio/ogg"></audio>
@@ -55,8 +55,8 @@
 			<p>0:59 - [Secure] so many matters</p>
 			<p>1:01 - Ha-zi-est, to what [Unintelligible]</p>
 			<p>1:07 - [Unintelligible, perhaps another language?]</p>
-			<audio controls><source src="assets/mu_thief.ogg" type="audio/ogg"></audio>
-			<p>This is the music that plays in Purgatory. It’s the same one used in the April Fools build.</p>
+			<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/242513887&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/strawberryjello" title="StrawberryJello" target="_blank" style="color: #cccccc; text-decoration: none;">StrawberryJello</a> · <a href="https://soundcloud.com/strawberryjello/020-the-witchs-island-yume-nikki-ost" title="020 - &quot;Island of the Witch&quot; - Yume Nikki OST" target="_blank" style="color: #cccccc; text-decoration: none;">020 - &quot;Island of the Witch&quot; - Yume Nikki OST</a></div>
+			<p>This is the music that plays in Purgatory. It's taken from the Yume Nikki OST. It was also used in the April Fools build.</p>
 			<h2>GPB Dialog (OUTDATED)</h2>
 			<ul style="font-size: 16px;">
 				<li>Standard Dialog:
