adjusted soundcloud embed

--- a/keyhunt/other-af23.html
+++ b/keyhunt/other-af23.html
@@ -28,8 +28,8 @@
 		<div style="padding:20px; margin-top:20px;">
 			<h1 style="text-align: center;">Other Stuff</h1>
 			<h2>The Void Room</h2>
-			<audio controls><source src="assets/mu_thief.ogg" type="audio/ogg"></audio>
-			<p>This is the music that plays in the Void Room, as well as several secret areas. Somehow, it is even more eerie than the previous one.
+			<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/242513887&color=%23ff5500&auto_play=false&hide_related=false&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
+			<p>This is the music that plays in the Void Room, as well as several secret areas. It's taken from the Yume Nikki OST.
 			<br>The Void Room can be accessed in the same way as in v1.1. However, you will now be met with an infinitely looping white plane with only occasional decoration. Shadow Pizzaboy can be found by running far enough in either direction.</p>
 			<h2>Shadow Pizzaboy</h2>
 			<img src="assets/spr_heaven-af23.png">
