--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -55,7 +55,7 @@
 			<p>0:59 - [Secure] so many matters</p>
 			<p>1:01 - Ha-zi-est, to what [Unintelligible]</p>
 			<p>1:07 - [Unintelligible, perhaps another language?]</p>
-			<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/242513887&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/strawberryjello" title="StrawberryJello" target="_blank" style="color: #cccccc; text-decoration: none;">StrawberryJello</a> · <a href="https://soundcloud.com/strawberryjello/020-the-witchs-island-yume-nikki-ost" title="020 - &quot;Island of the Witch&quot; - Yume Nikki OST" target="_blank" style="color: #cccccc; text-decoration: none;">020 - &quot;Island of the Witch&quot; - Yume Nikki OST</a></div>
+			<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/242513887&color=%23ff5500&auto_play=false&hide_related=false&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
 			<p>This is the music that plays in Purgatory. It's taken from the Yume Nikki OST. It was also used in the April Fools build.</p>
 			<h2>GPB Dialog (OUTDATED)</h2>
 			<ul style="font-size: 16px;">
