update gpb dialog
now for crustavo

--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -57,8 +57,13 @@
 			<p>1:07 - [Unintelligible, perhaps another language?]</p>
 			<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/242513887&color=%23ff5500&auto_play=false&hide_related=false&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
 			<p>This is the music that plays in Purgatory. It's taken from the Yume Nikki OST. It was also used in the April Fools build.</p>
-			<h2>GPB Dialog (OUTDATED)</h2>
+			<h2>GPB Dialog</h2>
 			<ul style="font-size: 16px;">
+				<li>First Interaction:
+					<ol>
+						<li>another lost soul has come here<br>to attempt to free me<br>try as you might<br>there will be nothing</li>
+					</ol>
+				</li>
 				<li>Standard Dialog:
 					<ol>
 						<li>... do you hear the squeal of the ones trapped in the box?<br>do you embrace their cries? do not.<br>for those are simply mimics aiming to harm you. avoid them...</li>
@@ -66,30 +71,48 @@
 						<li>you've escaped the crumbling tower before, haven't you?<br>and yet here you are again. and all you had worked for has been re-established with the blink of an eye.<br>this is the fate you deserve</li>
 					</ol>
 				</li>
+				<li>First Interaction with 5+ Keys:
+					<ol>
+						<li>the locale<br>have you talked to them all?<br>they might know a new thing or two</li>
+					</ol>
+				</li>
+				<li>Second Interaction with 5+ Keys:
+					<ol>
+						<li>someone in the roof<br>something ails them<br>come and see</li>
+					</ol>
+				</li>
 				<li style="padding-top: 24px">5+ Keys:<br>All previous dialog plus...
 					<ol>
-						<li>rooms such as this one, how many of them are there?<br>maybe you are not looking hard enough</li>
-						<li>the man with the rat... the man with the rat...<br>a bit too kindhearted, dont you think?<br>...and what about his cousin?</li>
-						<li>the locale, have you talked to them all?<br>they might know a new thing or two</li>
-						<li>someone in the roof<br>something ails them<br>come and see</li>
+						<li>rooms such as this one<br>how many of them are there?<br>maybe you are not looking hard enough</li>
+						<li>the man with the rat... the man with the rat...<br>a bit too kindhearted<br>dont you think?<br>...and what about his cousin?</li>
 						<li>a statue of yourself<br>what is there to commemorate<br>you bury your secrets deep down</li>
+					</ol>
+				</li>
+				<li>First Interaction with 15+ Keys:
+					<ol>
+						<li>someone similar to you was looking around here<br>find him<br>he has something to show you</li>
 					</ol>
 				</li>
 				<li style="padding-top: 24px">15+ Keys:<br>All previous dialog plus...
 					<ol>
-						<li>ha ha ha<br>do you see it?<br>it sees you</li>
-						<li>someone similar to you was looking around here<br>find him<br>he has something to show you</li>
-						<li>there was someone up above<br>perhaps an angel<br>it descended from the sky</li>
+						<li>ha ha ha<br>do you see him?<br>he sees you</li>
+						<li>someone up above<br>perhaps an angel<br>he tried to save me<br>have you seen him?<br>you must find him</li>
+						<li>realms such as this one<br>some even beyond my control<br>maybe in a past life</li>
 						<li>the tower shifts beneath your feet<br>have you noticed</li>
+					</ol>
+				</li>
+				<li>First Interaction when Key 30 can spawn:
+					<ol>
+						<li>all your scurrying around<br>yet you cannot find everything<br>not even something right infront of you</li>
 					</ol>
 				</li>
 				<li style="padding-top: 24px">25+ Keys:<br>All previous dialog plus...
 					<ol>
-						<li>you think you know everything<br>foolish</li>
-						<li>the floor beneath you... are you sure it's ever so stable?<br>are you moving around on your own<br>ever so sure that you conquered the tower?<br>...but have you ever wondered... has the tower conquered you instead?</li>
-						<li>... so proud, so sure, running through. breaking the fundaments and scavaging all you can...<br>are you even sure of what you are doing?<br>are you aware of what will happen?<br>such thought disturbs the others.</li>
+						<li>you think you know everything<br>yet you know nothing<br>foolish</li>
+						<li>the floor beneath you... are you sure it's ever so stable?<br>are you moving around on your own, ever so sure that you conquered the tower?<br>...but have you ever wondered... has the tower conquered you instead?</li>
+						<li>... so proud, so sure, running through. breaking the fundaments and scavaging all you can...<br>are you even sure of what you are doing?<br>are you aware of what will happen?<br>such thought disturbs the others</li>
 						<li>... and yet, after all was spoken, you came still.<br>you never let go. explored every corner. exhausted everything everyone could ever say.<br>was leaving ever even an option?</li>
-						<li>listen to the rumbling<br>this place is crashing and burning</li>
+						<li>listen to the rumbling<br>this place is crashing and burning<br>can you feel it too?</li>
 					</ol>
 				</li>
 				<li style="padding-top: 24px">35+ Keys:
@@ -109,6 +132,7 @@
 						<li>isnt there something you are forgetting?</li>
 						<li>are you lost?</li>
 						<li>where are you?</li>
+						<li>what are you looking for?</li>
 					</ol>
 				</li>
 				<li style="padding-top: 24px">After being talked to more than 6 times with 20+ Keys:
@@ -116,11 +140,11 @@
 						<li>you do not know what you want</li>
 						<li>you are not welcome</li>
 						<li>...</li>
-						<li>i've been watching you</li>
+						<li>we have been watching you</li>
 						<li>the others are not pleased</li>
+						<li>you stand before me yet you are not aware of what i am capable of</li>
 					</ol>
 				</li>
-				<p>There's also a 0.5% chance every time you talk for him to say "leave" repeatedly afterwards.</p>
 			</ul>
 			<h2>Crustavo (OUTDATED)</h2>
 			<p>Crustavo exists solely to say vague and ominous things to scare the player. None of his dialog is actually relevant.</p>
