--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -146,24 +146,32 @@
 					</ol>
 				</li>
 			</ul>
-			<h2>Crustavo (OUTDATED)</h2>
+			<h2>Crustavo</h2>
 			<p>Crustavo exists solely to say vague and ominous things to scare the player. None of his dialog is actually relevant.</p>
 			<ul style="font-size: 16px;">
-				<li>Floor 1: I've been seeing more and more cracks around in this tower. This place has seen better days...</li>
-				<li>Floor 2: I was on the 5th floor and I thought I saw something hiding near a door. Havent been up there since...</li>
-				<li>Floor 3: Something crawled into the ground on the floor below us. You know anything about that?</li>
-				<li>Floor 4: My brother went missing in one of the secret hub rooms... the last I heard of him he was in some... art gallery?</li>
-				<li>Floor 4: That janitor knows more than he's letting on...</li>
-				<li>Floor 5: Boy, this floor is kind of spooky! I'm quaking in my tiny crust boots!</li>
+				<li>Floor 1.1: I've been seeing more and more cracks around in this tower. This place has seen better days...</li>
+				<li>Floor 1.2: Something freaky is going on around this tower. Oh well!</li>
+				<li>Floor 2.1:  I was on the fifth floor and I thought I saw something hiding near a door. Havent been up there since...</li>
+				<li>Floor 2.2: Dum de dum... hopefully no one finds my Dark Secret... that would be unfortunate...</li>
+				<li>Floor 3.1: Something crawled into the ground on the floor below us. You know anything about that?</li>
+				<li>Floor 3.2: My mother is ill. Last thing she did before her illness ailed her was go into some weird room.</li>
+				<li>Floor 4.1: My brother went missing in one of the secret hub rooms. They never found him.</li>
+				<li>Floor 4.2: That blocky Janitor fellow is being a real nuisance.</li>
+				<li>Floor 5.1: Boy, this floor is kind of spooky! I'm quaking in my tiny crust boots!</li>
+				<li>Floor 5.2: Do you hear that?</li>
 			</ul>
 			<p style="padding-top: 24px">His dialog in each location changes after you collect 25 Keys.</p>
 			<ul style="font-size: 16px;">
-				<li>Floor 1: I keep seeing more and more things crawling around here... it's freaking me out a little bit...</li>
-				<li>Floor 2: That thing on the 5th floor... I swear I keep seeing it... like it's following me...</li>
-				<li>Floor 3: I keep hearing voices whispering to me. Do you think I should see a doctor?</li>
-				<li>Floor 4: Aha... ahahah... I keep seeing things crawl in the corner of my eye and it's driving me crazy!</li>
-				<li>Floor 4: I swear I've seen that janitor guy doing shady stuff around here...</li>
-				<li>Floor 5: ...I wouldn't trust that tubby golden fellow if I were you...</li>
+				<li>Floor 1.1: I keep seeing more and more things crawling around here... it's freaking me out a little bit...</li>
+				<li>Floor 1.2: Something freaky is going on around this tower. Oh god help me!</li>
+				<li>Floor 2.1: That thing on the fifth floor... I swear I keep seeing it... like it's following me...</li>
+				<li>Floor 2.2: Someone found out about my Dark Secret... so I had to take care of them.</li>
+				<li>Floor 3.1: I keep hearing voices whispering to me. Do you think I should see a doctor?</li>
+				<li>Floor 3.2: Mother told me to keep being me! She's so supportive.</li>
+				<li>Floor 4.1: Aha... ahahah... I keep seeing things crawl in the corner of my eye and it's driving me crazy!</li>
+				<li>Floor 4.2: I swear I've seen that janitor guy doing shady stuff around here...</li>
+				<li>Floor 5.1: Aaaaah! You scared me! Next time you sneak up on me, make sure to take me out!</li>
+				<li>Floor 5.2: Something feels weird...</li>
 			</ul>
 			<h2 id="fakekeys">Fake Key</h2>
 			<p>There is only one fake Key. Here’s it’s location:</p>
