--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -9,8 +9,8 @@
 
 	<meta content="Key Hunt Guide (v1.2)" property="og:title" />
 	<meta content="another lost soul has come here" property="og:description" />
-	<meta content="https://westcraft15.github.io/keyhunt/other" property="og:url" />
-	<meta content="https://westcraft15.github.io/keyhunt/assets/favicon-1.1.png" property="og:image" />
+	<meta content="https://westcraft15.github.io/keyhunt/keyhunt" property="og:url" />
+	<meta content="https://westcraft15.github.io/keyhunt/assets/Purouy.png" property="og:image" />
 	<meta content="#D8A030" data-react-helmet="true" name="theme-color" />
 
 	<script>
