--- a/keyhunt/keyhunt-1.1.html
+++ b/keyhunt/keyhunt-1.1.html
@@ -7,6 +7,12 @@
   		<link rel="icon" type="image/x-icon" href="assets/favicon-1.1.png">
 	</head>
 
+	<meta content="Key Hunt Guide (v1.1)" property="og:title" />
+	<meta content="what are you running from?" property="og:description" />
+	<meta content="https://westcraft15.github.io/keyhunt/keyhunt-1.1" property="og:url" />
+	<meta content="https://westcraft15.github.io/keyhunt/assets/favicon-1.1.png" property="og:image" />
+	<meta content="#33ADFF" data-react-helmet="true" name="theme-color" />
+
 	<body style="text-align: center;">
 		<ul class="navBar">
 			<li><a href="keyhunt-1.1" class="current">Landing page</a></li>
