--- a/keyhunt/other-af23.html
+++ b/keyhunt/other-af23.html
@@ -7,6 +7,12 @@
   		<link rel="icon" type="image/x-icon" href="assets/favicon-af23.png">
 	</head>
 
+	<meta content="Key Hunt Guide (April Fools)" property="og:title" />
+	<meta content="when will you learn?" property="og:description" />
+	<meta content="https://westcraft15.github.io/keyhunt/keyhunt-af23" property="og:url" />
+	<meta content="https://westcraft15.github.io/keyhunt/assets/favicon-af23.png" property="og:image" />
+	<meta content="#E03000" data-react-helmet="true" name="theme-color" />
+
 	<body>
 		<ul class="navBar">
 			<li><a href="keyhunt-af23">Landing page</a></li>
